fix(OnyxCheckbox): update checked and indeterminate icon color in dark mode (#3767)
Relates to #3650

Fix the checkmark and indeterminate icon color of the checkbox to update
in dark mode. Previously the color was always white which caused the
icons to not be visible in the kaufland dark theme.

## Checklist

- [x] The added / edited code has been documented with
[JSDoc](https://jsdoc.app/about-getting-started)
- [x] If a new component is added, at least one [Playwright screenshot
test](https://github.com/SchwarzIT/onyx/actions/workflows/playwright-screenshots.yml)
or functional test is added
- [x] A changeset is added with `npx changeset add` if your changes
should be released as npm package (because they affect the library
usage)
- [x] I have performed a self review of my code ("Files changed" tab in
the pull request)

---------

--- a/packages/sit-onyx/src/styles/mixins/checkbox.scss
+++ b/packages/sit-onyx/src/styles/mixins/checkbox.scss
@@ -51,12 +51,26 @@
   }
 
   &:checked {
-    // icon (with added fill='white'): check-small.svg
-    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='white' xml:space='preserve' viewBox='0 0 32 32'%3E%3Cpath d='m21.311 10.793-8.293 8.293-3.291-3.292-1.415 1.415 4.706 4.705 9.707-9.707z'/%3E%3C/svg%3E");
+    // used onyx icon (but converted to clip-path): check-small.svg
+    &::after {
+      content: " ";
+      background-color: var(--onyx-color-text-icons-neutral-inverted);
+      width: 100%;
+      height: 100%;
+      display: block;
+      clip-path: polygon(66.6% 33.7%, 40.7% 59.6%, 30.4% 49.3%, 26% 53.7%, 40.7% 68.4%, 71% 38.1%);
+    }
   }
 
   &:indeterminate {
-    // icon (with added fill='white'): minus-small.svg
-    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='white' xml:space='preserve' viewBox='0 0 32 32'%3E%3Cpath d='M8 15h16v2H8z'/%3E%3C/svg%3E");
+    // used onyx icon (but converted to clip-path): minus-small.svg
+    &::after {
+      content: " ";
+      background-color: var(--onyx-color-text-icons-neutral-inverted);
+      width: 100%;
+      height: 100%;
+      display: block;
+      clip-path: polygon(25% 46.9%, 75% 46.9%, 75% 53.1%, 25% 53.1%);
+    }
   }
 }
